--- a/package.json
+++ b/package.json
@@ -2,23 +2,29 @@
   "name": "math",
   "version": "1.0.0",
   "private": true,
+  "homepage": "http://svagi.github.io/math",
   "dependencies": {
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-router": "^3.0.2"
   },
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.9.3",
     "standard": "^8.6.0"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "start": "react-scripts start",
+    "test": "react-scripts test --env=jsdom"
   },
   "standard": {
     "parser": "babel-eslint",
-    "plugins": ["flowtype"]
+    "plugins": [
+      "flowtype"
+    ]
   }
 }
