--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "private": true,
   "homepage": "http://svagi.github.io/math",
   "dependencies": {
-    "react": "15.4.2",
-    "react-dom": "15.4.2",
-    "react-router": "^3.0.2"
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
-    "gh-pages": "^0.12.0",
-    "react-scripts": "0.9.3",
-    "standard": "^8.6.0"
+    "gh-pages": "^2.2.0",
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "build": "react-scripts build",
@@ -21,10 +20,22 @@
     "start": "react-scripts start",
     "test": "react-scripts test --env=jsdom"
   },
-  "standard": {
-    "parser": "babel-eslint",
-    "plugins": [
-      "flowtype"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
+  },
+  "prettier": {
+    "proseWrap": "always",
+    "singleQuote": true,
+    "semi": false,
+    "trailingComma": "es5"
   }
 }
