--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,5 +21,6 @@ jobs:
           yarn
           yarn test --passWithNoTests
           yarn build
+          yarn deploy
         env:
           CI: true
