--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,6 +21,9 @@ jobs:
           yarn
           yarn test --passWithNoTests
           yarn build
-          yarn deploy
         env:
           CI: true
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@4.1.5
+        
+
